src/objects/Schedule__c.object
<CustomObject>
    <description>This custom object is a singular instance (one to many) of the Class object.  Schedules are logical instances of a Class.</description>
    <fields>
        <fullName>AutoExtendFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoExtendFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Schedule_As_Of__c</fullName>
        <description>Set this field if you are making changes to an active schedule.  All session dates equal to or greater to the value in this field will be modified</description>
        <inlineHelpText>Set this field if you are making changes to an active schedule.  All session dates equal to or greater to the value in this field will be modified</inlineHelpText>
        <label>Change Schedule As Of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>The Class that this Schedule is related to.</description>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dummy_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, create session logic is not run on the schedule. This is used for schedules where the sessions will be added via a nightly process, such as for the DTC Groups.</description>
        <label>Dummy Schedule?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The End Date of this schedule</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension_Days_to_Generate__c</fullName>
        <defaultValue>8</defaultValue>
        <label>Extension Days to Generate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Friday_End_Time__c</fullName>
        <label>Friday End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Friday_Start_Time__c</fullName>
        <label>Friday Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this schedule includes a session on Friday</description>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monday_End_Time__c</fullName>
        <label>Monday End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monday_Start_Time__c</fullName>
        <label>Monday Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this schedule includes a session on Monday</description>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Months_of_Sessions_to_Generate__c</fullName>
        <label>Months of Sessions to Generate</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_End_Date__c</fullName>
        <label>Original End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Start_Date__c</fullName>
        <label>Original Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_Type_RPT__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday_End_Time__c</fullName>
        <label>Saturday End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Saturday_Start_Time__c</fullName>
        <label>Saturday Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this schedule includes a session on Saturday</description>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Single_Session_Ongoing__c</fullName>
        <description>If ongoing single session class then skip jobAutoextendSchedule</description>
        <formula>TEXT(Class__r.Default_Ending_Session__c)</formula>
        <label>Single Session Ongoing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The start date of this schedule</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sunday_End_Time__c</fullName>
        <label>Sunday End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sunday_Start_Time__c</fullName>
        <label>Sunday Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this schedule includes a session on Sunday</description>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thursday_End_Time__c</fullName>
        <label>Thursday End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Thursday_Start_Time__c</fullName>
        <label>Thursday Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this schedule includes a session on Thursday</description>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tuesday_End_Time__c</fullName>
        <label>Tuesday End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tuesday_Start_Time__c</fullName>
        <label>Tuesday Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this schedule includes a session on Tuesday</description>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UI_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UI_Start_Date__c</fullName>
        <description>This is used by the New Schedule VF page</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wednesday_End_Time__c</fullName>
        <label>Wednesday End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wednesday_Start_Time__c</fullName>
        <label>Wednesday Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this schedule includes a session on Wednesday</description>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Class__c</columns>
        <columns>Original_Start_Date__c</columns>
        <columns>Original_End_Date__c</columns>
        <columns>Record_Type_RPT__c</columns>
        <columns>Extension_Days_to_Generate__c</columns>
        <columns>End_Date__c</columns>
        <columns>UI_End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>UI_Start_Date__c</columns>
        <columns>Friday__c</columns>
        <columns>Friday_End_Time__c</columns>
        <columns>Friday_Start_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <recordTypes>
        <fullName>Fixed_Schedule</fullName>
        <active>true</active>
        <label>Fixed Schedule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ongoing_Schedule</fullName>
        <active>true</active>
        <label>Ongoing Schedule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Single_Schedule</fullName>
        <active>true</active>
        <label>Single Schedule</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>